@@ -6584,3 +6584,6 @@ PACKAGE: 2.2.99.2
 2007-12-03 tdb
  * #3139, show deleted records in OAI output instead of just repeating the
     current data set
+
+2007-12-03 cjg
+ * Import IDs are removed unless import_ids is enabled.
